--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <base href="/">
-        <title>Angular 10 Boilerplate - Email Sign Up</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="//netda.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
-        
-    </head>
-    <body>
-        <app>Loading...</app>
+<head>
+    <base href="/" />
+    <title>Angular 10 Boilerplate - Email Sign Up with Verification, Authentication & Forgot Password</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <div class="text-center mt-4">
-            <p><a href="#" target="_top">Angular 17 Boilerplate - Email Sign Up with Verification, Authentication & Forgot Password</a></p>
-            <p><a href="https://wilschoy78.github.io/" target="_top"></a>wilson</p>
-        </div>
-    </body>
+    <!-- bootstrap css -->
+    <link href="//netdna.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
+</head>
+<body>
+    <app>Loading...</app>
+</body>
 </html>
